# dia-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/: LICENSE-APACHE  README.md
.github/workflows/: build.yml
.metadata/: dia.manual.cs  generate.proj  options.rsp
.windows/winmd/: Microsoft.Dia.winmd  readme.md
crates/samples/checksum/: Cargo.toml
crates/samples/checksum/src/: main.rs
crates/samples/functions/: Cargo.toml
crates/samples/functions/src/: main.rs
crates/tests/enumerators/: Cargo.toml
crates/tests/enumerators/tests/: tests.rs
crates/tools/api/: Cargo.toml
crates/tools/api/src/: main.rs
src/: bindings.rs  helper_bindings.rs  helpers.rs  lib.rs  public_bindings.rs
src/Microsoft/: mod.rs
src/Microsoft/Dia/: impl.rs  mod.rs
src/helpers/: mod.rs
tests/: main.rs
tests/basic/: mod.rs
tests/common/: mod.rs
tests/enumerators/: mod.rs
