[package]
name = "microsoft-dia"
version = "0.12.0"
authors = ["Microsoft"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust for Debug Interface Access (DIA) SDK"
repository = "https://github.com/microsoft/dia-rs"
readme = ".github/README.md"
exclude = [".github", ".metadata", "docs", "tests"]

[workspace]
members = ["crates/samples/*"]

[dependencies.windows]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_System_Ole",
    "Win32_System_Com_StructuredStorage",
]

[dependencies.windows-core]
version = "0.59"

[dependencies.windows-targets]
version = "0.53"

[build-dependencies.windows-bindgen]
version = "0.59"
