[package]
name = "microsoft-dia"
version = "0.15.0"
authors = ["Microsoft"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust for Debug Interface Access (DIA) SDK"
repository = "https://github.com/microsoft/dia-rs"
readme = ".github/README.md"
exclude = [".github", ".metadata", "docs", "tests"]

[workspace]
members = ["crates/samples/*"]

[dependencies]
windows-core = "0.62"
windows-link = "0.2"

[dependencies.windows]
version = "0.62"
features = ["Win32_System_Com", "Win32_System_Variant", "Win32_System_Ole", "Win32_System_Com_StructuredStorage"]

[build-dependencies]
windows-bindgen= "0.63"
